clapi_macros/test_suite/tests/ui/fail/invalid_arg_value/invalid_arg_description.rs
use clapi::macros::*;

#[command]
#[arg(x, description=1)]
fn app(x: i64){}

fn main(){}