clapi_macros/test_suite/tests/ui/fail/invalid_arg_value/invalid_arg_description.stderr
error: custom attribute panicked
 --> $DIR/invalid_arg_description.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: arg `description` is expected to be a string literal
